# midi-composer-mcp

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: test.yml
demos/: 01_tintinnabuli_cantus.mid  02_anthem.mid  03_jazz_reharm.mid  04_counterpoint_species.mid  05_flamenco.mid  06_negative_harmony.mid  README.md  generate.py
examples/: generate_examples.py
src/midi_composer_mcp/: __init__.py  audio.py  chords.py  circle.py  counterpoint.py  diatonic.py  forms.py  generate.py  harmony.py  melody.py  midi_io.py  notes.py  scales.py  server.py  structure.py
tests/: test_arrange_audio.py  test_chords.py  test_database.py  test_diatonic.py  test_generate.py  test_harmony.py  test_melody.py  test_midi_io.py  test_notes.py  test_octave_matching.py  test_scales.py  test_server.py  test_structure.py
