[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "midi-composer-mcp"
version = "0.1.0"
description = "MCP server with atomic music-theory and MIDI tools for LLM-driven composition"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
keywords = ["mcp", "midi", "music", "composer", "scales", "chords"]
dependencies = [
    "mcp>=1.2.0",
    "mido>=1.3.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
midi-composer-mcp = "midi_composer_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/midi_composer_mcp"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
